--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,39 @@
-cmake_minimum_required(VERSION 2.8.12)
-project(Pandanite)
+cmake_minimum_required(VERSION 3.10)
+project(pandanite_node)
+
+# Get Git version
+function(get_git_version)
+    find_package(Git QUIET)
+    if(GIT_FOUND)
+        execute_process(
+            COMMAND ${GIT_EXECUTABLE} describe --tags --always --dirty
+            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+            OUTPUT_VARIABLE GIT_VERSION
+            OUTPUT_STRIP_TRAILING_WHITESPACE
+        )
+        execute_process(
+            COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
+            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+            OUTPUT_VARIABLE GIT_COMMIT_HASH
+            OUTPUT_STRIP_TRAILING_WHITESPACE
+        )
+    else()
+        set(GIT_VERSION "unknown")
+        set(GIT_COMMIT_HASH "unknown")
+    endif()
+
+    # Generate version header
+    configure_file(
+        ${CMAKE_SOURCE_DIR}/cmake/version.h.in
+        ${CMAKE_BINARY_DIR}/version.h
+        @ONLY
+    )
+endfunction()
+
+get_git_version()
+
+# Add version.h to include directories
+include_directories(${CMAKE_BINARY_DIR})
 
 # Compiler Flags
 if (WIN32)
