Restore version.h generation in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,40 @@ endif()
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
+# Get Git version
+function(get_git_version)
+    find_package(Git QUIET)
+    if(GIT_FOUND)
+        execute_process(
+            COMMAND ${GIT_EXECUTABLE} describe --tags --always --dirty
+            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+            OUTPUT_VARIABLE GIT_VERSION
+            OUTPUT_STRIP_TRAILING_WHITESPACE
+        )
+        execute_process(
+            COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
+            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+            OUTPUT_VARIABLE GIT_COMMIT_HASH
+            OUTPUT_STRIP_TRAILING_WHITESPACE
+        )
+    else()
+        set(GIT_VERSION "unknown")
+        set(GIT_COMMIT_HASH "unknown")
+    endif()
+
+    # Generate version header
+    configure_file(
+        ${CMAKE_SOURCE_DIR}/cmake/version.h.in
+        ${CMAKE_BINARY_DIR}/version.h
+        @ONLY
+    )
+endfunction()
+
+get_git_version()
+
+# Add version.h to include directories
+include_directories(${CMAKE_BINARY_DIR})
+
 # Find Conan-generated files
 find_package(nlohmann_json REQUIRED)
 find_package(OpenSSL REQUIRED)
