Fix uWebSockets configuration in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ find_package(nlohmann_json REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(leveldb REQUIRED)
 find_package(CURL REQUIRED)
+find_package(uwebsockets REQUIRED)
 
 # Additional includes
 include_directories(
@@ -61,6 +62,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/src/external
     /usr/local/include/
     ${CONAN_INCLUDE_DIRS_UWEBSOCKETS}
+    ${UWEBSOCKETS_INCLUDE_DIRS}
 )
 
 # Source files
